Ready style for all browsers

--- a/sass/_map.scss
+++ b/sass/_map.scss
@@ -4,7 +4,7 @@
   background-color: $color-grey;
   height: 100%;
   &--back {
-    content:url("../img/map_back.png");
+    //content:url("../img/map_back.png");
     position: absolute;
     left: 0;
     top: 0;
