--- a/css/style.css
+++ b/css/style.css
@@ -6,20 +6,17 @@
 }
 @media only screen and (max-width: 768px) {
   .meet div .col-xs-12 {
-    padding-left: 28%;
-    padding-top: 5%;
+    padding: 5% 0 0 28%;
   }
 }
 @media only screen and (max-width: 600px) {
   .meet div .col-xs-12 {
-    padding-left: 20%;
-    padding-top: 5%;
+    padding: 5% 0 0 20%;
   }
 }
 @media only screen and (max-width: 400px) {
   .meet div .col-xs-12 {
-    padding-left: 15%;
-    padding-top: 5%;
+    padding: 5% 0 0 15%;
   }
 }
 .meet div .col-xs-12 .meet__team--people {
@@ -99,6 +96,10 @@
 .meet div .col-xs-12 .meet__team--background {
   opacity: 0;
   position: absolute;
+  background: rgba(243, 129, 129, 0.8);
+  background: -webkit-linear-gradient(rgba(243, 129, 129, 0.8), rgba(252, 227, 138, 0.8));
+  background: -o-linear-gradient(rgba(243, 129, 129, 0.8), rgba(252, 227, 138, 0.8));
+  background: -moz-linear-gradient(rgba(243, 129, 129, 0.8), rgba(252, 227, 138, 0.8));
   background: linear-gradient(rgba(243, 129, 129, 0.8), rgba(252, 227, 138, 0.8));
   width: 360px;
   z-index: 400;
@@ -131,15 +132,23 @@
 }
 .meet div .col-xs-12 .meet__team--imgs {
   position: absolute;
-  margin-left: 20%;
   z-index: 300;
-  margin-top: 20%;
+  margin: 20% 0 0 20%;
+}
+@media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
+  .meet div .col-xs-12 .meet__team--imgs {
+    margin: 50% 0 0 20%;
+  }
+}
+@-moz-document url-prefix() {
+  .meet div .col-xs-12 .meet__team--imgs {
+    margin: 50% 0 0 20%;
+  }
 }
 .meet div .col-xs-12 .meet__team--imgs .meet__team--img {
-  margin-top: 50%;
   position: relative;
-  margin-left: -5px;
   padding: 15px 15px 15px 15px;
+  margin: 50% 0 0 -5px;
   background-color: #fce38a;
 }
 .meet div .col-xs-12 .meet__team--imgs .meet__team--img:first-child {
@@ -149,6 +158,74 @@
 .meet div .col-xs-12 .meet__team--imgs .meet__team--img:nth-child(2) {
   content: url(../img/pictograms/meet_twitter.png);
   padding-top: 19px;
+}
+@media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
+  .meet div .col-xs-12 .meet__team--imgs .meet__team--img:nth-child(2) {
+    padding-top: 15px;
+  }
+}
+@-moz-document url-prefix() {
+  .meet div .col-xs-12 .meet__team--imgs .meet__team--img:nth-child(2) {
+    padding-top: 15px;
+  }
+}
+@media only screen and (max-width: 1200px) {
+  .meet div .col-xs-12 .meet__team--imgs .meet__team--img:nth-child(2) {
+    padding-top: 14px;
+  }
+}
+@media only screen and (max-width: 1200px) and (-ms-high-contrast: active), only screen and (max-width: 1200px) and (-ms-high-contrast: none) {
+  .meet div .col-xs-12 .meet__team--imgs .meet__team--img:nth-child(2) {
+    padding-top: 15px;
+  }
+}
+@media only screen and (max-width: 1200px) {
+  @-moz-document url-prefix() {
+    .meet div .col-xs-12 .meet__team--imgs .meet__team--img:nth-child(2) {
+      padding-top: 15px;
+    }
+  }
+}
+@media only screen and (max-width: 1000px) {
+  @-moz-document url-prefix() {
+    .meet div .col-xs-12 .meet__team--imgs .meet__team--img:nth-child(2) {
+      padding-top: 10px;
+    }
+  }
+}
+@media only screen and (max-width: 768px) {
+  .meet div .col-xs-12 .meet__team--imgs .meet__team--img:nth-child(2) {
+    padding-top: 19px;
+  }
+}
+@media only screen and (max-width: 768px) and (-ms-high-contrast: active), only screen and (max-width: 768px) and (-ms-high-contrast: none) {
+  .meet div .col-xs-12 .meet__team--imgs .meet__team--img:nth-child(2) {
+    padding-top: 15px;
+  }
+}
+@media only screen and (max-width: 768px) {
+  @-moz-document url-prefix() {
+    .meet div .col-xs-12 .meet__team--imgs .meet__team--img:nth-child(2) {
+      padding-top: 15px;
+    }
+  }
+}
+@media only screen and (max-width: 500px) {
+  .meet div .col-xs-12 .meet__team--imgs .meet__team--img:nth-child(2) {
+    padding-top: 14px;
+  }
+}
+@media only screen and (max-width: 500px) and (-ms-high-contrast: active), only screen and (max-width: 500px) and (-ms-high-contrast: none) {
+  .meet div .col-xs-12 .meet__team--imgs .meet__team--img:nth-child(2) {
+    padding-top: 10px;
+  }
+}
+@media only screen and (max-width: 500px) {
+  @-moz-document url-prefix() {
+    .meet div .col-xs-12 .meet__team--imgs .meet__team--img:nth-child(2) {
+      padding-top: 10px;
+    }
+  }
 }
 .meet div .col-xs-12 .meet__team--imgs .meet__team--img:nth-child(2):hover {
   content: url(../img/pictograms/meet_twitter_white.png);
@@ -197,14 +274,10 @@
 }
 .meet div .col-xs-12 .meet__team--background:hover {
   opacity: 1;
-  margin-top: -20px;
-  margin-left: -20px;
-  margin-bottom: 20px;
+  margin: -20px 0 20px -20px;
 }
 .meet div .col-xs-12 .meet__team--background:hover + .meet__team--people {
-  margin-bottom: 20px;
-  margin-top: -20px;
-  margin-left: -20px;
+  margin: -20px 0 20px -20px;
 }
 .meet__name {
   text-align: center;
@@ -314,6 +387,10 @@
   height: 100%;
   top: 0;
   left: 0;
+  background: rgba(243, 129, 129, 0.8);
+  background: -webkit-linear-gradient(rgba(243, 129, 129, 0.8), rgba(252, 227, 138, 0.8));
+  background: -o-linear-gradient(rgba(243, 129, 129, 0.8), rgba(252, 227, 138, 0.8));
+  background: -moz-linear-gradient(rgba(243, 129, 129, 0.8), rgba(252, 227, 138, 0.8));
   background: linear-gradient(rgba(243, 129, 129, 0.8), rgba(252, 227, 138, 0.8));
   opacity: 0;
   transition: all 1s;
@@ -1052,7 +1129,6 @@
   height: 100%;
 }
 .map--back {
-  content: url("../img/map_back.png");
   position: absolute;
   left: 0;
   top: 0;
