--- a/css/style.css
+++ b/css/style.css
@@ -1118,10 +1118,17 @@
       -o-transition: all 500ms linear;
       -ms-transition: all 500ms linear;
       transition: all 500ms linear; }
-    #services .services__gallery__block__pic img {
-      margin-top: 5px;
-      width: 32px;
-      height: 31px; }
+    #services .services__gallery__block__pic {
+      -webkit-transition-property: -webkit-transform;
+      -webkit-transition-duration: 500ms;
+      -moz-transition-property: -moz-transform;
+      -moz-transition-duration: 500ms;
+      transition-property: transform;
+      transition-duration: 500ms; }
+      #services .services__gallery__block__pic img {
+        margin-top: 5px;
+        width: 32px;
+        height: 31px; }
     @media only screen and (max-width: 768px) {
       #services .services__gallery__block {
         margin: 5% 0 5% 0 !important; } }
@@ -1141,6 +1148,20 @@
   -webkit-animation: moveFromBottom 500ms ease-in-out;
   -moz-animation: moveFromBottom 500ms ease-in-out;
   -ms-animation: moveFromBottom 500ms ease-in-out; }
+
+.services__gallery .services__gallery__block:hover .pic {
+  -webkit-animation-name: rotate;
+  -webkit-animation-duration: 500ms;
+  -webkit-animation-iteration-count: 1;
+  -webkit-animation-timing-function: linear;
+  -moz-animation-name: rotate;
+  -moz-animation-duration: 500ms;
+  -moz-animation-iteration-count: 1;
+  -moz-animation-timing-function: linear;
+  animation-name: rotate;
+  animation-duration: 500ms;
+  animation-iteration-count: 1;
+  animation-timing-function: linear; }
 
 @-webkit-keyframes moveFromBottom {
   from {
@@ -1184,6 +1205,21 @@
   to {
     opacity: 1;
     -ms-transform: translateY(0%); } }
+@-webkit-keyframes rotate {
+  from {
+    -webkit-transform: rotate(0deg); }
+  to {
+    -webkit-transform: rotate(360deg); } }
+@-moz-keyframes rotate {
+  from {
+    -moz-transform: rotate(0deg); }
+  to {
+    -moz-transform: rotate(360deg); } }
+@keyframes rotate {
+  from {
+    transform: rotate(0deg); }
+  to {
+    transform: rotate(360deg); } }
 #design {
   position: relative;
   overflow: hidden;
