--- a/sass/_services.scss
+++ b/sass/_services.scss
@@ -49,6 +49,12 @@
         transition: all 500ms linear;
       }
       &__pic{
+        -webkit-transition-property: -webkit-transform;
+        -webkit-transition-duration: 500ms;
+        -moz-transition-property: -moz-transform;
+        -moz-transition-duration: 500ms;
+        transition-property: transform;
+        transition-duration: 500ms;
         img{
           margin-top: 5px;
           width: 32px;
@@ -78,9 +84,24 @@
 }
 
 .services__gallery .services__gallery__block:hover .description{
-  -webkit-animation: moveFromBottom 500ms ease-in-out;
-  -moz-animation: moveFromBottom 500ms ease-in-out;
-  -ms-animation: moveFromBottom 500ms ease-in-out;
+   -webkit-animation: moveFromBottom 500ms ease-in-out;
+   -moz-animation: moveFromBottom 500ms ease-in-out;
+   -ms-animation: moveFromBottom 500ms ease-in-out;
+ }
+
+.services__gallery .services__gallery__block:hover .pic{
+  -webkit-animation-name: rotate;
+  -webkit-animation-duration: 500ms;
+  -webkit-animation-iteration-count: 1;
+  -webkit-animation-timing-function: linear;
+  -moz-animation-name: rotate;
+  -moz-animation-duration: 500ms;
+  -moz-animation-iteration-count: 1;
+  -moz-animation-timing-function: linear;
+  animation-name: rotate;
+  animation-duration: 500ms;
+  animation-iteration-count: 1;
+  animation-timing-function: linear;
 }
 
 @-webkit-keyframes moveFromBottom {
@@ -143,4 +164,19 @@
     opacity: 1;
     -ms-transform: translateY(0%);
   }
+}
+
+@-webkit-keyframes rotate {
+  from {-webkit-transform: rotate(0deg);}
+  to {-webkit-transform: rotate(360deg);}
+}
+
+@-moz-keyframes rotate {
+  from {-moz-transform: rotate(0deg);}
+  to {-moz-transform: rotate(360deg);}
+}
+
+@keyframes rotate {
+  from {transform: rotate(0deg);}
+  to {transform: rotate(360deg);}
 }
