--- a/css/style.css
+++ b/css/style.css
@@ -689,6 +689,10 @@
         @media (max-width: 500px) {
           #numbers .row .numbers__div span.numbers__div__count {
             font-size: 20px; } }
+        @media (max-width: 450px) {
+          #numbers .row .numbers__div span.numbers__div__count {
+            padding-left: 5px !important;
+            padding-right: 5px !important; } }
 
 .say {
   position: relative;
