--- a/sass/_numbers.scss
+++ b/sass/_numbers.scss
@@ -42,6 +42,10 @@
         @media(max-width:500px){
           font-size: 20px;
         }
+        @media(max-width:450px){
+          padding-left:5px !important;
+          padding-right:5px !important;
+        }
       }
     }
   }
