--- a/sass/_carousel.scss
+++ b/sass/_carousel.scss
@@ -20,27 +20,36 @@
       }
     }
     &--page {
-      margin-left:10%;
+      margin-left:15%;
       padding-top: 1%;
       @media #{$xs-screen}
       {
+        margin-left:8%;
         padding-left: 35%
       }
       &--img {
 
-        margin-left: 15%;
+        margin-left: 12%;
         margin-right: 5%;
         width: 100px !important;
         height: 100px!important;
         border: 2px solid $color-blue;
         padding:18px;
+
         img {
           width: 63px !important;
           height: 61px!important;
+          @media #{$xs-screen}
+          {
+            margin:auto;
+          }
         }
         @media #{$xs-screen}
         {
           margin:auto;
+        }
+        @media(max-width:600px){
+          margin-left:-5%;
         }
       }
       &--text {
@@ -53,14 +62,14 @@
           width: 90%;
           margin-top: 50px;
           padding-left: -30%;
-          margin-left: -20%;
+          margin-left: -30%;
         }
       }
       &--name {
         padding-top: 3%;
         @media #{$xs-screen}
         {
-          margin-left: -20%;
+          margin-left: -30%;
         }
         &--name {
           font-family: 'Kaushan Script', cursive;
