--- a/sass/_numbers.scss
+++ b/sass/_numbers.scss
@@ -42,10 +42,11 @@
         @media(max-width:500px){
           font-size: 20px;
         }
-        @media(max-width:450px){
-          padding-left:5px !important;
-          padding-right:5px !important;
-        }
+
+      }
+      @media(max-width:450px){
+        padding-left:1px;
+        padding-right:1px;
       }
     }
   }
