--- a/sass/_meet.scss
+++ b/sass/_meet.scss
@@ -221,9 +221,14 @@
         &--background:hover {
           opacity: 1;
           margin: -20px 0 20px -20px;
+          transition: all 1s;
+          -webkit-transition: all 1s;
+
         }
         &--background:hover + .meet__team--people {
           margin: -20px 0 20px -20px;
+          transition: all 1s;
+          -webkit-transition: all 1s;
         }
       }
     }
