--- a/sass/_page-title.scss
+++ b/sass/_page-title.scss
@@ -24,7 +24,9 @@
      margin-right: 20%;
      margin-top: 1.5%;
      width: 60%;
-    color: $color-grey-light;
-
+     color: $color-grey-light;
   }
+}
+body{
+  overflow-x:hidden;
 }
