--- a/sass/_meet.scss
+++ b/sass/_meet.scss
@@ -142,7 +142,7 @@
             }
             @media#{$md-screen}
             {
-              padding-top: 14px;
+              padding-top: 19px;
               @media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
                 padding-top: 15px;
               }
@@ -151,6 +151,13 @@
               }
             }
             @media only screen and (max-width: 1000px) {
+              @-moz-document url-prefix() {
+                padding-top: 10px;
+              }
+            }
+            @media#{$sm-screen}
+            {
+              padding-top: 14px;
               @-moz-document url-prefix() {
                 padding-top: 10px;
               }
