--- a/sass/_carousel.scss
+++ b/sass/_carousel.scss
@@ -59,17 +59,17 @@
         width: 70%;
         @media #{$xs-screen}
         {
-          width: 90%;
+          width: 150%;
           margin-top: 50px;
           padding-left: -30%;
-          margin-left: -30%;
+          margin-left: -60%;
         }
       }
       &--name {
         padding-top: 3%;
         @media #{$xs-screen}
         {
-          margin-left: -30%;
+          margin-left: -60%;
         }
         &--name {
           font-family: 'Kaushan Script', cursive;
@@ -88,6 +88,15 @@
     @media #{$xs-screen}
     {
       margin-top: 100%;
+    }
+    @media(max-width:640px){
+      margin-top:120%;
+    }
+    @media(max-width:480px){
+      margin-top:200%;
+    }
+    @media(max-width:420px){
+      margin-top:250%;
     }
   }
 
