--- a/sass/_service.scss
+++ b/sass/_service.scss
@@ -65,6 +65,7 @@
         }
 
         &:after {
+          //gora
           content: "\2303";
           font-family: FontAwesome;
           color: $color-grey-dark;
@@ -74,6 +75,8 @@
           font-size: 48px;
           @media #{$xs-screen} {
             font-size: 30px;
+            top: 32px;
+
           }
         }
 
@@ -84,10 +87,11 @@
             color: $color-grey-dark;
             position: absolute;
             right: 15px;
-            top: 5px;
+            top: -3px;
             font-size: 48px;
             @media #{$xs-screen} {
               font-size: 30px;
+              top:13px;
             }
           }
           &:hover {
