--- a/sass/_foot.scss
+++ b/sass/_foot.scss
@@ -40,6 +40,16 @@
         font-style: italic;
         color: $color-grey-light;
         padding-right: 4%;
+        margin-left: -10%;
+        @media#{$md-screen}{
+
+        }
+        @media#{$sm-screen}{
+          margin-left: -5%;
+        }
+        @media#{$xs-screen}{
+          margin-left: -50px;
+        }
       }
       img{
         padding-right: 1.5%;
@@ -74,7 +84,9 @@
         margin-top: 5%;
         margin-left: -1.2%;
         @media only screen and (max-width: 500px){
-          padding-left: 10px;
+          font-size: 0.8em;
+          margin-top: -5%;
+          padding: 13px 5px;
         }
       }
     }
@@ -115,12 +127,19 @@
       }
       @media#{$md-screen}{
         img {
-          width: 70%;
+          width: 80%;
         }
       }
-      @media all and(max-width:500px){
-        width: 100%;
-
+      @media#{$xs-screen}{
+        img {
+          width: 100%;
+        }
+      }
+      @media all and(max-width:400px){
+        img {
+          margin-top: 5%;
+          width: 150%;
+        }
       }
     }
   }
@@ -170,3 +189,84 @@
     }
   }
 }
+
+#foot__1--site--sprite{
+  position: relative;
+}
+#foot__1--site--sprite li{
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  position: absolute;
+  top:-5px;
+}
+#foot__1--site--sprite li,#foot__1--site--sprite a{
+  height: 30px;
+  display: block;
+}
+
+#dribble{
+left: 90px;
+width: 25px;
+background: url('../img/pictograms/spritesheet.png') 0 0;
+@media #{$xs-screen}{
+  left: 60px;
+}
+
+}
+
+#facebook{
+  left: 113px;
+  width: 25px;
+  background: url('../img/pictograms/spritesheet.png') -25px 0;
+  @media #{$xs-screen}{
+    left: 83px;
+  }}
+
+#google{
+  left: 140px;
+  width: 25px;
+  background: url('../img/pictograms/spritesheet.png') -50px 0;
+  @media #{$xs-screen}{
+    left: 110px;
+  }}
+
+#instagram{
+  left: 164px;
+  width: 25px;
+  background: url('../img/pictograms/spritesheet.png') -75px 0;
+  @media #{$xs-screen}{
+    left: 134px;
+  }}
+
+#pinterest{
+  left: 190px;
+  width: 25px;
+  background: url('../img/pictograms/spritesheet.png') -100px 0;
+  @media #{$xs-screen}{
+    left: 160px;
+  }}
+
+#tumblr{
+  left: 215px;
+  width: 25px;
+  background: url('../img/pictograms/spritesheet.png') -125px 0;
+  @media #{$xs-screen}{
+    left: 185px;
+  }}
+
+#twitter{
+  left: 243px;
+  width: 25px;
+  background: url('../img/pictograms/spritesheet.png') -150px 0;
+  @media #{$xs-screen}{
+    left: 213px;
+  }}
+
+#youtube{
+  left: 273px;
+  width: 25px;
+  background: url('../img/pictograms/spritesheet.png') -175px 0;
+  @media #{$xs-screen}{
+    left: 243px;
+  }}
