Fix figcaption in BLOG

--- a/sass/_blog.scss
+++ b/sass/_blog.scss
@@ -83,13 +83,18 @@
         }
         @media only screen and (max-width: 670px){
         left: 15%;
-      }
+        }
         @media only screen and (max-width: 600px){
           left: 10%;
         }
         @media only screen and (max-width: 500px){
           right: 70%;
           left: -5%;
+        }
+        @media only screen and (max-width: 360px){
+          right: 70%;
+          left: -5%;
+          top: 30%;
         }
       }
       &--day {
