--- a/css/style.css
+++ b/css/style.css
@@ -925,6 +925,11 @@
     .blog__news figcaption {
       right: 70%;
       left: -5%; } }
+  @media only screen and (max-width: 360px) {
+    .blog__news figcaption {
+      right: 70%;
+      left: -5%;
+      top: 30%; } }
 .blog__news--day {
   font-family: 'Montserrat', sans-serif;
   font-size: 2em;
