--- a/css/style.css
+++ b/css/style.css
@@ -795,7 +795,8 @@
     opacity: 0.2; }
   .say__client {
     padding-top: 2%;
-    padding-bottom: 5%; }
+    padding-bottom: 5%;
+    margin-bottom: 3%; }
     .say__client--name {
       font-family: 'Montserrat', sans-serif;
       font-size: 1em;
