--- a/sass/_say.scss
+++ b/sass/_say.scss
@@ -1,5 +1,4 @@
 .say {
-  //padding-top: 5%;
   position:relative;
   overflow: hidden;
   background-color: $color-grey;
@@ -17,6 +16,7 @@
   &__client{
     padding-top: 2%;
     padding-bottom: 5%;
+    margin-bottom: 3%;
     &--name{
       font-family: 'Montserrat', sans-serif;
       font-size: 1em;
