--- a/css/style.css
+++ b/css/style.css
@@ -1259,6 +1259,12 @@
   @media only screen and (max-width: 768px) {
     .testimontial {
       height: 400px; } }
+  @media only screen and (max-width: 650px) {
+    .testimontial {
+      height: 350px; } }
+  @media only screen and (max-width: 300px) {
+    .testimontial {
+      height: 400px; } }
   .testimontial__slider--left {
     text-align: center;
     margin-top: 5%; }
@@ -1299,15 +1305,15 @@
       width: 70%; }
       @media only screen and (max-width: 768px) {
         .testimontial__slider--page--text {
-          width: 140%;
+          width: 200%;
           margin-top: 50px;
-          margin-left: -45%;
+          margin-left: -85%;
           margin-right: 10%; } }
     .testimontial__slider--page--name {
       padding-top: 3%; }
       @media only screen and (max-width: 768px) {
         .testimontial__slider--page--name {
-          margin-left: -25%; } }
+          margin-left: -85%; } }
       .testimontial__slider--page--name--name {
         font-family: 'Kaushan Script', cursive; }
 
