--- a/css/style.css
+++ b/css/style.css
@@ -379,11 +379,11 @@
       #banner .banner__slider__slide .slide__bar {
         border: 2px white solid;
         width: 80%;
-        margin-left: 4%;
-        margin-bottom: 5%; }
+        margin-left: 4%; }
       #banner .banner__slider__slide .slide__text {
         font-size: 15px;
-        font-weight: 700; }
+        font-weight: 700;
+        margin-bottom: 5%; }
         @media (max-width: 768px) {
           #banner .banner__slider__slide .slide__text {
             font-size: 10px; } }
