--- a/css/style.css
+++ b/css/style.css
@@ -518,8 +518,103 @@
     -o-transform: rotate(-135deg);
     transform: rotate(-135deg); }
 
-.navbar-ex1-collapse {
-  background: transparent !important; }
+.nav-control {
+  background: #95e1d3;
+  width: 100%;
+  z-index: 101;
+  position: fixed;
+  height: 50px; }
+  .nav-control.menu-open {
+    border-bottom: 1px solid white; }
+  .nav-control .nav__sm {
+    width: 100%; }
+    .nav-control .nav__sm .logo {
+      height: 100%;
+      padding-top: 13px; }
+    .nav-control .nav__sm .button {
+      height: 100%;
+      padding-left: 40%;
+      padding-top: 10px; }
+      .nav-control .nav__sm .button img {
+        margin: 0; }
+  .nav-control .wrapper {
+    display: none;
+    z-index: 100;
+    margin-left: 82.5%;
+    width: 20%;
+    padding-top: 5px;
+    margin-top: 2.15%;
+    border: 1px solid white;
+    border-top: none;
+    background: #95e1d3;
+    height: 300px;
+    border-bottom-left-radius: 30px;
+    border-bottom-right-radius: 30px; }
+    .nav-control .wrapper .nav__navbar__links {
+      padding-left: 0;
+      margin: 0;
+      width: 100%;
+      list-style-type: none; }
+      .nav-control .wrapper .nav__navbar__links .link {
+        width: 100%;
+        display: block;
+        height: 40px;
+        background: #95e1d3;
+        text-align: center;
+        vertical-align: middle;
+        line-height: 40px;
+        border-top: 1px solid white; }
+        .nav-control .wrapper .nav__navbar__links .link:nth-child(1) {
+          border-top: none; }
+        .nav-control .wrapper .nav__navbar__links .link a {
+          font-size: 20px;
+          color: white;
+          text-decoration: none;
+          border-bottom: 4px solid #95e1d3; }
+          .nav-control .wrapper .nav__navbar__links .link a:hover {
+            color: #fce38a;
+            border-bottom: 4px solid #fce38a; }
+
+#hamburger-icon {
+  width: 50px;
+  height: 25px;
+  position: relative;
+  display: block; }
+  #hamburger-icon .line {
+    display: block;
+    background: #ecf0f1;
+    width: 50px;
+    height: 6px;
+    position: absolute;
+    left: 0;
+    border-radius: 3px;
+    transition: all 0.4s;
+    -webkit-transition: all 0.4s;
+    -moz-transition: all 0.4s; }
+    #hamburger-icon .line.line-1 {
+      top: 0; }
+    #hamburger-icon .line.line-2 {
+      top: 50%; }
+    #hamburger-icon .line.line-3 {
+      top: 100%; }
+  #hamburger-icon:hover .line-1, #hamburger-icon:focus .line-1 {
+    transform: translateY(-3px);
+    -webkit-transform: translateY(-3px);
+    -moz-transform: translateY(-3px); }
+  #hamburger-icon:hover .line-3, #hamburger-icon:focus .line-3 {
+    transform: translateY(3px);
+    -webkit-transform: translateY(3px);
+    -moz-transform: translateY(3px); }
+  #hamburger-icon.active .line-1 {
+    transform: translateY(12.5px) translateX(0) rotate(45deg);
+    -webkit-transform: translateY(12.5px) translateX(0) rotate(45deg);
+    -moz-transform: translateY(12.5px) translateX(0) rotate(45deg); }
+  #hamburger-icon.active .line-2 {
+    opacity: 0; }
+  #hamburger-icon.active .line-3 {
+    transform: translateY(-12.5px) translateX(0) rotate(-45deg);
+    -webkit-transform: translateY(-12.5px) translateX(0) rotate(-45deg);
+    -moz-transform: translateY(-12.5px) translateX(0) rotate(-45deg); }
 
 #about .about__gallery {
   width: 90%;
