--- a/css/style.css
+++ b/css/style.css
@@ -423,110 +423,118 @@
   .banner__info--second {
     font-size: 30px !important;
     line-height: 35px !important; } }
-.nav li a {
-  color: white !important;
-  text-align: center;
-  text-transform: uppercase;
-  font-weight: 700; }
-  .nav li a:hover {
-    color: #fce38a !important;
-    border-bottom: 4px solid #fce38a; }
-  @media (max-width: 768px) {
-    .nav li a {
-      margin-top: 1%;
-      background: #95e1d3;
-      border-radius: 35px; } }
-.nav .navbar__pic--cart {
-  content: url("../img/pictograms/banner_shopping-cart.png"); }
-.nav .navbar__pic--glass {
-  content: url("../img/pictograms/banner_magnifying-glass.png"); }
+.navbar-default {
+  background-color: transparent;
+  border-bottom-color: transparent;
+  font-family: 'Montserrat', sans-serif;
+  font-size: 18px;
+  font-weight: 600; }
+  .navbar-default li a {
+    color: white !important; }
 
-@media (min-width: 768px) {
-  .navbar {
-    padding: 20px 0;
-    background-color: transparent;
-    border: none !important;
-    -webkit-transition: background .5s ease-in-out,padding .5s ease-in-out,background-color .5s ease-in-out;
-    -moz-transition: background .5s ease-in-out,padding .5s ease-in-out,background-color .5s ease-in-out;
-    transition: background .5s ease-in-out,padding .5s ease-in-out,background-color .5s ease-in-out; }
-    .navbar-toggle {
-      background: transparent; }
+.navbar-arrow {
+  border: solid white;
+  border-width: 0 10px 10px 0;
+  display: inline-block;
+  background-color: transparent;
+  padding: 10px;
+  margin-right: 10px;
+  transform: rotate(-45deg);
+  -webkit-transform: rotate(-45deg); }
 
-  .top-nav-collapse {
-    padding: 0;
-    background-color: #95e1d3; } }
-.navbar .navbar__img {
-  z-index: 100;
-  display: block; }
-@media (max-width: 768px) {
-  .navbar {
-    background-color: transparent;
-    border-bottom: none;
-    -webkit-transition: all .5s ease-in-out;
-    -moz-transition: all .5s ease-in-out;
-    transition: all .5s ease-in-out; }
-    .navbar .navbar__img {
-      display: none; } }
-@media (max-width: 768px) {
-  .navbar--visible {
+.top-nav-collapse {
+  background-color: #95e1d3;
+  height: 8%; }
+
+.top-xs {
+  background-color: #95e1d3; }
+  .top-xs li a {
+    text-align: center; }
+
+.collapsed {
+  background-color: #95e1d3; }
+
+.navbar-toggle {
+  background-color: transparent;
+  border-color: transparent !important; }
+
+.navbar-default .navbar-toggle:focus {
+  background-color: transparent; }
+
+.navbar-default .navbar-toggle:hover {
+  background-color: #f38181 !important; }
+
+@media only screen and (max-width: 768px) {
+  .navbar-default .navbar-nav > li > a:focus,
+  .navbar-default .navbar-nav > li > a:hover {
     background-color: #95e1d3;
-    border-bottom: none; } }
+    text-decoration: underline; } }
+.icon-bar {
+  background-color: white !important; }
 
-#nav-icon1 {
-  width: 60px;
-  height: 45px;
+@media only screen and (max-width: 768px) {
+  .navbar-default {
+    height: 10%; }
+    .navbar-default li a {
+      background-color: #95e1d3; } }
+/*.menu {
+  font-family: 'Montserrat', sans-serif;
+  font-size: 15px;
+  font-weight: 800;
+  letter-spacing: 1.5px;
+  line-height: 1em;
+  margin: 10px 20px 10px 40px;
+  text-transform: uppercase;
+  position: fixed;
+  z-index: 500;
+  text-align: right;
+}
+.menu li {
+  display: inline-block;
+  list-style: outside none none;
+  margin: 0.5em 0.6em;
+  padding: 12px 15px;
   position: relative;
-  margin: 50px auto;
-  -webkit-transform: rotate(0deg);
-  -moz-transform: rotate(0deg);
-  -o-transform: rotate(0deg);
-  transform: rotate(0deg);
-  -webkit-transition: .5s ease-in-out;
-  -moz-transition: .5s ease-in-out;
-  -o-transition: .5s ease-in-out;
-  transition: .5s ease-in-out;
-  cursor: pointer; }
-  #nav-icon1 span {
-    display: block;
-    position: absolute;
-    height: 9px;
-    width: 100%;
-    background: #d3531a;
-    border-radius: 9px;
-    opacity: 1;
-    left: 0;
-    -webkit-transform: rotate(0deg);
-    -moz-transform: rotate(0deg);
-    -o-transform: rotate(0deg);
-    transform: rotate(0deg);
-    -webkit-transition: .25s ease-in-out;
-    -moz-transition: .25s ease-in-out;
-    -o-transition: .25s ease-in-out;
-    transition: .25s ease-in-out; }
-    #nav-icon1 span:nth-child(1) {
-      top: 0px; }
-    #nav-icon1 span:nth-child(2) {
-      top: 18px; }
-    #nav-icon1 span:nth-child(3) {
-      top: 36px; }
-  #nav-icon1.open span:nth-child(1) {
-    top: 18px;
-    -webkit-transform: rotate(135deg);
-    -moz-transform: rotate(135deg);
-    -o-transform: rotate(135deg);
-    transform: rotate(135deg); }
-  #nav-icon1.open span:nth-child(2) {
-    opacity: 0;
-    left: -60px; }
-  #nav-icon1.open span:nth-child(3) {
-    top: 18px;
-    -webkit-transform: rotate(-135deg);
-    -moz-transform: rotate(-135deg);
-    -o-transform: rotate(-135deg);
-    transform: rotate(-135deg); }
+}
+.menu li a {
+  color: white;
+  text-decoration: none;
+}*/
+.menu li:before,
+.menu li:after {
+  -webkit-transition: all 0.35s ease;
+  transition: all 0.35s ease;
+  height: 3px;
+  width: 45%;
+  background-color: #95e1d3;
+  position: absolute;
+  content: '';
+  opacity: 0; }
 
-.navbar-ex1-collapse {
-  background: transparent !important; }
+.menu li:before {
+  top: 0;
+  left: 0; }
+
+.menu li:after {
+  bottom: 0;
+  right: 0; }
+
+.menu li:hover:before,
+.menu li.hover:before,
+.menu li:hover:after,
+.menu li.hover:after {
+  opacity: 1; }
+
+.menu li:hover:before,
+.menu li.hover:before {
+  left: 65%; }
+
+.menu li:hover:after,
+.menu li.hover:after {
+  right: 65%; }
+
+body {
+  text-align: right; }
 
 #about .about__gallery {
   width: 90%;
