--- a/sass/_nav.scss
+++ b/sass/_nav.scss
@@ -1,137 +1,133 @@
-.nav{
+.navbar-default{
+  background-color: transparent;
+  border-bottom-color: transparent;
+  font-family: 'Montserrat', sans-serif;
+  font-size: 18px;
+  font-weight: 600;
   li{
     a{
-      color: white !important;
+      color: white!important;
+    }
+  }
+}
+.navbar-arrow{
+  border: solid white;
+  border-width: 0 10px 10px 0;
+  display: inline-block;
+  background-color: transparent;
+  padding: 10px;
+  margin-right: 10px;
+  transform: rotate(-45deg);
+  -webkit-transform: rotate(-45deg);
+}
+
+.top-nav-collapse{
+  background-color: $color-blue;
+  height:8%;
+}
+.top-xs{
+  background-color: $color-blue;
+  li{
+    a{
       text-align: center;
-      text-transform: uppercase;
-      font-weight: 700;
-      &:hover {
-        color:$color-yellow !important;
-        border-bottom: 4px solid $color-yellow;
-
-      }
-      @media(max-width:$xs) {
-        margin-top:1%;
-        background: $color-blue;
-        border-radius:35px;
-      }
     }
-  }
-  .navbar__pic--cart{
-    content:url("../img/pictograms/banner_shopping-cart.png");
-  }
-  .navbar__pic--glass{
-    content:url("../img/pictograms/banner_magnifying-glass.png");
   }
 }
-@media(min-width:$xs) {
-    .navbar {
-        padding: 20px 0;
-        background-color: transparent;
-        border: none !important;
-        -webkit-transition: background .5s ease-in-out,padding .5s ease-in-out,background-color .5s ease-in-out;
-        -moz-transition: background .5s ease-in-out,padding .5s ease-in-out,background-color .5s ease-in-out;
-        transition: background .5s ease-in-out,padding .5s ease-in-out,background-color .5s ease-in-out;
-      &-toggle{
-        background: transparent;
+.collapsed{
+  background-color: $color-blue;
+}
+.navbar-toggle{
+  background-color: transparent;
+  border-color: transparent !important;
+}.navbar-default .navbar-toggle:focus{
+   background-color: transparent;
+ }
+.navbar-default .navbar-toggle:hover{
+  background-color: $color-red!important;
+}
 
-      }
+@media#{$xs-screen}{
+  .navbar-default .navbar-nav > li > a:focus,
+  .navbar-default .navbar-nav > li > a:hover {
+    background-color: $color-blue;
+    text-decoration: underline;
 
-    }
+  }
+}
 
-    .top-nav-collapse {
-        padding: 0;
+
+.icon-bar{
+  background-color: white!important;
+}
+
+@media#{$xs-screen}
+{
+  .navbar-default{
+    height: 10%;
+    li{
+      a{
         background-color: $color-blue;
-    }
-}
-.navbar{
-  .navbar__img{
-    z-index: 100;
-    display:block;
-  }
-  @media(max-width:$xs) {
-    background-color: transparent;
-    border-bottom: none;
-    .navbar__img{
-      display: none;
-    }
-    -webkit-transition: all .5s ease-in-out;
-    -moz-transition: all .5s ease-in-out;
-    transition: all .5s ease-in-out;
-  }
-
-  &--visible{
-    @media(max-width:$xs) {
-      background-color:$color-blue;
-      border-bottom: none;
-
-
+      }
     }
   }
 }
 
-#nav-icon1 {
-  width: 60px;
-  height: 45px;
+/*.menu {
+  font-family: 'Montserrat', sans-serif;
+  font-size: 15px;
+  font-weight: 800;
+  letter-spacing: 1.5px;
+  line-height: 1em;
+  margin: 10px 20px 10px 40px;
+  text-transform: uppercase;
+  position: fixed;
+  z-index: 500;
+  text-align: right;
+}
+.menu li {
+  display: inline-block;
+  list-style: outside none none;
+  margin: 0.5em 0.6em;
+  padding: 12px 15px;
   position: relative;
-  margin: 50px auto;
-  -webkit-transform: rotate(0deg);
-  -moz-transform: rotate(0deg);
-  -o-transform: rotate(0deg);
-  transform: rotate(0deg);
-  -webkit-transition: .5s ease-in-out;
-  -moz-transition: .5s ease-in-out;
-  -o-transition: .5s ease-in-out;
-  transition: .5s ease-in-out;
-  cursor: pointer;
-  span {
-    display: block;
-    position: absolute;
-    height: 9px;
-    width: 100%;
-    background: #d3531a;
-    border-radius: 9px;
-    opacity: 1;
-    left: 0;
-    -webkit-transform: rotate(0deg);
-    -moz-transform: rotate(0deg);
-    -o-transform: rotate(0deg);
-    transform: rotate(0deg);
-    -webkit-transition: .25s ease-in-out;
-    -moz-transition: .25s ease-in-out;
-    -o-transition: .25s ease-in-out;
-    transition: .25s ease-in-out;
-    &:nth-child(1) {
-      top: 0px;
-    }
-    &:nth-child(2) {
-      top: 18px;
-    }
-    &:nth-child(3) {
-      top: 36px;
-    }
-  }
-  &.open span {
-    &:nth-child(1) {
-      top: 18px;
-      -webkit-transform: rotate(135deg);
-      -moz-transform: rotate(135deg);
-      -o-transform: rotate(135deg);
-      transform: rotate(135deg);
-    }
-    &:nth-child(2) {
-      opacity: 0;
-      left: -60px;
-    }
-    &:nth-child(3) {
-      top: 18px;
-      -webkit-transform: rotate(-135deg);
-      -moz-transform: rotate(-135deg);
-      -o-transform: rotate(-135deg);
-      transform: rotate(-135deg);
-    }
-  }
 }
-.navbar-ex1-collapse{
-  background: transparent !important;
+.menu li a {
+  color: white;
+  text-decoration: none;
+}*/
+.menu li:before,
+.menu li:after {
+  -webkit-transition: all 0.35s ease;
+  transition: all 0.35s ease;
+  height: 3px;
+  width: 45%;
+  background-color: $color-blue;
+  position: absolute;
+  content: '';
+  opacity: 0;
+}
+.menu li:before {
+  top: 0;
+  left: 0;
+}
+.menu li:after {
+  bottom: 0;
+  right: 0;
+}
+.menu li:hover:before,
+.menu li.hover:before,
+.menu li:hover:after,
+.menu li.hover:after {
+  opacity: 1;
+}
+.menu li:hover:before,
+.menu li.hover:before {
+  left: 65%;
+}
+.menu li:hover:after,
+.menu li.hover:after {
+  right: 65%;
+}
+body{
+  text-align: right;
 }
